# icloudAlbum2hugo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  album_data_debug.txt  icloudalbums.yaml  prompt_plan.md  small_spec.md  spec.md
.github/workflows/: release.yml  rust-audit.yml  rust-docs.yml  rust-fmt.yml  rust-lint.yml  rust-test.yml
custom/: data.yaml
custom/path/mock1/: index.md
custom/path/mock2/: index.md
custom/path/mock3/: index.md
layouts/galleries/: single.html
src/: api_debug.rs  config.rs  exif.rs  gallery.rs  geocode.rs  icloud.rs  index.rs  lib.rs  main.rs  mock.rs  sync.rs
tests/: gallery_test.rs  icloud_integration_test.rs
