[package]
name = "icloudAlbum2hugo"
version = "0.4.0"
edition = "2024"
authors = ["Harper Reed <harper@harper.website>"]
description = "A command-line tool that syncs photos from iCloud Shared Albums to a Hugo site"
readme = "README.md"
repository = "https://github.com/harperreed/icloudAlbum2hugo"
license = "MIT"
keywords = ["hugo", "icloud", "photos", "cli", "static-site"]
categories = ["command-line-utilities", "multimedia", "web-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
icloud-album-rs = "0.4.0"
url = "2.5"
mockito = "1.3"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.5.5"
rand = "0.8"
md5 = "0.7"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
